@@ -16,33 +16,6 @@ defmodule Protox.Encode do
     Zigzag
   }
 
-  @doc """
-  Encode a protobuf message into IO data.
-
-  ## Example
-      msg = %Fiz.Foo{a: 3, b: %{1 => %Fiz.Baz{}}}
-      {:ok, iodata} = Protox.Encode.encode(msg)
-
-  """
-  @deprecated "Use Protox.encode/1 instead"
-  @spec encode(struct()) :: {:ok, iodata()} | {:error, any()}
-  def encode(msg) do
-    # A compilation error at the line below usually happen if `msg`
-    # is not a struct generated by protox.
-    msg.__struct__.encode(msg)
-  end
-
-  @doc """
-  Throwing version of `encode/1`.
-  """
-  @deprecated "Use Protox.encode!/1 instead"
-  @spec encode!(struct()) :: iodata() | no_return()
-  def encode!(msg) do
-    # A compilation error at the line below usually happen if `msg`
-    # is not a struct generated by protox.
-    msg.__struct__.encode!(msg)
-  end
-
   @doc false
   @spec make_key_bytes(Protox.Types.tag(), Protox.Types.type()) :: iodata
   def make_key_bytes(tag, ty) do
@@ -172,7 +145,7 @@ defmodule Protox.Encode do
   @doc false
   @spec encode_message(struct) :: iodata
   def encode_message(value) do
-    encoded = value |> encode!() |> :binary.list_to_bin()
+    encoded = value |> Protox.encode!() |> :binary.list_to_bin()
     [Varint.encode(byte_size(encoded)), encoded]
   end
 end
